added seat selectin section

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <!-- divider div -->
         <div class="divider divider-horizontal "></div>
         <!-- ticket price -->
-        <div class="text-center grow-2/3">
+        <div class="text-center grow-2/3 flex justify-center items-center flex-col">
           <i class="fa-sharp-duotone m-8  fa-solid fa-bangladeshi-taka-sign fa-beat fa-2xl" style="color: #09d72b;"></i>
           <h1 class="text-5xl font-bold">550 Taka</h1>
           <p class="text-slate-500">Per Seat</p>
@@ -167,14 +167,27 @@
     </section>
 
     <!-- seat selection section -->
-    <section class="bg-white mx-24">
+    <section class="bg-white mx-24 pt-2 rounded-xl">
+      <!-- seat position container div -->
+      <div class="m-10">
+        <h3 class="text-2xl font-bold">Select Your Seat</h3>
+        <div class="flex justify-between border-b-2 border-dashed my-5">
+          <div class="font-bold "><i class="fa-solid fa-chair pr-2"></i>  Available</div>
+          <div class="text-[#09d72b] font-bold"><i class="fa-solid fa-chair pr-2 " style="color: #14e121;"></i>  Selecter</div>
+        </div>
+      </div> 
 
+      <!------------------- seats------------------ -->
+      <div class="flex justify-end">
+        <div class="h-14 w-24 bg-gray-200 p-5 mx-10 flex justify-center items-center rounded-xl"><i class="fa-solid fa-dharmachakra fa-spin fa-2xl"></i></div>
+      </div>
+      <div>
+        
+      </div>
     </section>   
 
-
-
-
     
+
   </main>
 </body>
 
